// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queryCS: 序 1`] = `
Array [
  Object {
    "调": 4,
    "释": "〔原〕",
    "音": "ɕy",
  },
  Object {
    "调": 4,
    "释": "〔新〕",
    "音": "ɕi",
  },
]
`;

exports[`queryCS: 強 1`] = `
Array [
  Object {
    "调": 2,
    "释": "倔强,强大,勉强",
    "音": "tɕian",
  },
  Object {
    "调": 3,
    "释": "倔强,强大,勉强",
    "音": "tɕian",
  },
  Object {
    "调": 5,
    "释": "倔强,强大,勉强",
    "音": "tɕian",
  },
]
`;

exports[`queryCS: 指 1`] = `
Array [
  Object {
    "调": 6,
    "释": "〔未注明〕",
    "音": "tsɿ",
  },
  Object {
    "调": 3,
    "释": "〔未注明〕",
    "音": "tsɿ",
  },
]
`;

exports[`queryCS: 會 1`] = `
Array [
  Object {
    "调": 5,
    "释": "〔文〕开会,会不会之文白读皆同",
    "音": "fei",
  },
  Object {
    "调": 4,
    "释": "〔白〕开会,会不会之文白读皆同",
    "音": "fei",
  },
  Object {
    "调": 4,
    "释": "",
    "音": "kʰuai",
  },
]
`;

exports[`queryCS: 核 1`] = `
Array [
  Object {
    "调": 6,
    "释": "核桃,核对同音",
    "音": "xɤ",
  },
]
`;

exports[`queryCS: 樹 1`] = `
Array [
  Object {
    "调": 5,
    "释": "〔文〕树立",
    "音": "ɕy",
  },
  Object {
    "调": 4,
    "释": "〔白〕树立",
    "音": "ɕy",
  },
  Object {
    "调": 5,
    "释": "〔文〕树林",
    "音": "ɕy",
  },
  Object {
    "调": 4,
    "释": "〔白〕树林",
    "音": "ɕy",
  },
]
`;

exports[`queryCS: 蟻 1`] = `
Array [
  Object {
    "调": 2,
    "释": "〔文〕",
    "音": "ȵi",
  },
  Object {
    "调": 5,
    "释": "〔白〕",
    "音": "ȵi",
  },
  Object {
    "调": 3,
    "释": "〔白〕",
    "音": "ȵi",
  },
  Object {
    "调": 4,
    "释": "〔白〕",
    "音": "ȵi",
  },
]
`;

exports[`queryCS: 間 1`] = `
Array [
  Object {
    "调": 1,
    "释": "中间",
    "音": "kan",
  },
  Object {
    "调": 4,
    "释": "间断",
    "音": "kan",
  },
]
`;
